Image sequence paint undo: freezes blender (bug 1) or looses changes (bug 2) #39156

Closed
opened 2014-03-13 14:33:07 +01:00 by Michael P. · 9 comments

System Information
Windows 7 64bit
NVIDIA GeForce GTX 760

Blender Version
Broken: blender-2.70-RC2-windows64

Short description of error
Image sequence paint undo: freezes blender (bug 1) or looses changes (bug 2).

Exact steps for others to reproduce the error
Please use the attached zip file. It includes a blend file and an image sequence.
{F80961}2014-03-13-paint-undo-crash-freeze.jpg

There are two undo issues here.

Preparing the test for both issues:

  • open file
  • paint one simple stroke
  • in the "Image" panel to the right increase the "Offset" value, so you get the next image
  • repeat 2. and 3. until you have painted three images

Bug 1 - Blender freezes if the user makes to many undo operations:

  • you have prepared the test as described above
  • undo (CTRL + Y) several times (more than three times)

Blender freezes

Please reopen the file and prepare the test again.

Bug 2 - History undo looses changes made to images:

  • you have prepared the test as described above
  • call the undo history (CTRL + ALT + Y)
  • you should see three times "Image paint" and one "original" entry
  • select the second "Image paint" from above
  • go to the "Image" panel on the right side
  • decrease the "Offset" value and you can see that all changes are gone
**System Information** Windows 7 64bit NVIDIA GeForce GTX 760 **Blender Version** Broken: blender-2.70-RC2-windows64 **Short description of error** Image sequence paint undo: freezes blender (bug 1) or looses changes (bug 2). **Exact steps for others to reproduce the error** Please use the attached zip file. It includes a blend file and an image sequence. {[F80961](https://archive.blender.org/developer/F80961/2014-03-13-paint-undo-crash-freeze.zip)}![2014-03-13-paint-undo-crash-freeze.jpg](https://archive.blender.org/developer/F80962/2014-03-13-paint-undo-crash-freeze.jpg) There are two undo issues here. Preparing the test for both issues: - open file - paint one simple stroke - in the "Image" panel to the right increase the "Offset" value, so you get the next image - repeat 2. and 3. until you have painted three images Bug 1 - Blender freezes if the user makes to many undo operations: - you have prepared the test as described above - undo (CTRL + Y) several times (more than three times) # Blender freezes Please reopen the file and prepare the test again. Bug 2 - History undo looses changes made to images: - you have prepared the test as described above - call the undo history (CTRL + ALT + Y) - you should see three times "Image paint" and one "original" entry - select the second "Image paint" from above - go to the "Image" panel on the right side - decrease the "Offset" value and you can see that all changes are gone
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

Added subscribers: @Psy-Fi, @ThomasDinges

Added subscribers: @Psy-Fi, @ThomasDinges

Antony, can you please check if this is a Blender 2.7 regression?

Antony, can you please check if this is a Blender 2.7 regression?

It's not a regression, it is an old bug, still it would be good to have it included for 2.70. Fix is local, small and impossible to go wrong and it is a deadlock after all. Luckily it should only affect painting. The second bug is more general and it does not only affect image sequences. Other modes that use a local undo stack (sculpt, paint) suffer from lack of undo history support. I will attempt a fix but looks like it's more like a to-do.

It's not a regression, it is an old bug, still it would be good to have it included for 2.70. Fix is local, small and impossible to go wrong and it is a deadlock after all. Luckily it should only affect painting. The second bug is more general and it does not only affect image sequences. Other modes that use a local undo stack (sculpt, paint) suffer from lack of undo history support. I will attempt a fix but looks like it's more like a to-do.

This issue was referenced by blender/blender-addons-contrib@93684d5b5e

This issue was referenced by blender/blender-addons-contrib@93684d5b5e3dcc6b9f0d4130ff5bdab86d2f7981

This issue was referenced by 93684d5b5e

This issue was referenced by 93684d5b5e3dcc6b9f0d4130ff5bdab86d2f7981

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 93684d5b5e.

Closed by commit 93684d5b5e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39156
No description provided.