Fix bug 1 of T39156: Deadlock while undoing paint operations on image sequences.

This commit should be included in 2.70 release